<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="Ubicacion" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Perfil" />
        <item
            android:id="@+id/nav_inmuebles"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_inmuebles" />
        <item
            android:id="@+id/nav_inquilinos"
            android:icon="?android:attr/fingerprintAuthDrawable"
            android:title="@string/menu_inquilinos" />
        <item
            android:id="@+id/nav_contratos"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_contratos" />
        <item
            android:id="@+id/nav_logout"
            android:icon="?attr/homeAsUpIndicator"
            android:title="@string/menu_logout" />
    </group>
</menu>