<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inmuebles">

    <fragment
        android:id="@+id/nav_ubicacion"
        android:name="com.example.inmoapp.ui.ubicacion.UbicacionFragment"
        android:label="@string/menu_ubicacion"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmoapp.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmoapp.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_descripcionFragment"
            app:destination="@id/descripcionFragment" />
    </fragment>
    <fragment
        android:id="@+id/descripcionFragment"
        android:name="com.example.inmoapp.ui.inmuebles.DescripcionFragment"
        android:label="Detalles"
        tools:layout="@layout/fragment_descripcion" >
        <action
            android:id="@+id/action_descripcionFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmoapp.ui.inquilinos.InquilinosFragment"
        android:label="Inquilinos"
        tools:layout="@layout/fragment_inquilinos" >
        <action
            android:id="@+id/action_nav_inquilinos_to_detallesFragment"
            app:destination="@id/detallesFragment" />
    </fragment>
    <fragment
        android:id="@+id/detallesFragment"
        android:name="com.example.inmoapp.ui.inquilinos.DetallesFragment"
        android:label="Detalles"
        tools:layout="@layout/fragment_detalles" >
        <action
            android:id="@+id/action_detallesFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.inmoapp.ui.contratos.ContratosFragment"
        android:label="Contratos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_elContratoFragment"
            app:destination="@id/elContratoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.inmoapp.ui.logout.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/elContratoFragment"
        android:name="com.example.inmoapp.ui.contratos.ElContratoFragment"
        android:label="Contrato" >
        <action
            android:id="@+id/action_elContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
    </fragment>
    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.example.inmoapp.ui.pagos.PagosFragment"
        android:label="Pagos"
        tools:layout="@layout/fragment_pagos" >
        <action
            android:id="@+id/action_nav_pagos_to_pagosContratoFragment"
            app:destination="@id/pagosContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosContratoFragment"
        android:name="com.example.inmoapp.ui.pagos.PagosContratoFragment"
        android:label="Pagos"
        tools:layout="@layout/fragment_pagos_contrato" >
        <action
            android:id="@+id/action_pagosContratoFragment_to_nav_pagos"
            app:destination="@id/nav_pagos" />
    </fragment>

</navigation>